# bearings_collector

./: .gitignore  CMakeLists.txt  README.md  collector.conf  joy.conf  mainpage.dox  manifest.xml
src/: Joy2cmd_vel.cpp  bearingCollector.cpp  cameraStream.cpp  convert_output.cpp  imageReceiver.cpp  tools.cpp
stagestuff/: prova.world  stagerun.sh
